[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = "hw-4"
authors = ["Darina Khalina <darina.khalina@namecheap.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
aiofiles = "^24.1.0"
aiopath = "^0.7.7"
aiohttp = "^3.11.14"
setuptools = "^78.0.1"
aiofile = "^3.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
